<resources>
    <string name="app_name">Rate &amp; Share</string>
    <string name="app_id_facebook">333135537282994</string>
    <string name="titulo_login_tela">Login</string>
    <string name="titulo_novo_post"> Novo Post</string>
    <string name="titulo_config_tela">Configuração</string>

    <string name="titulo">Titulo</string>
    <string name="categoria">Categoria</string>
    <string name="awesome_button">Awesome Button</string>
    <string name="num_avaliacoes">Num Avaliacoes</string>
    <string name="descricao">Descricao</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="todo">TODO</string>
    <string name="title_activity_config">Configuração</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="configura_es">Configurações</string>
    <string name="n_o">Não</string>
    <string name="sim">Sim</string>
    <string name="deseja_receber_alertas_de_aprova_o">Deseja Receber Alertas de Aprovação ?</string>
    <string name="vinculos_com_rede_social">Vinculos com Rede Social:</string>
    <string name="vincular_facebook">Vincular Facebook</string>
    <string name="vincular_twiter">Vincular Twiter</string>
    <string name="vincular_instagram">Vincular Instagram</string>
    <string name="asdfasdfasdfasdf">asdfasdfasdfasdf</string>
</resources>
